# parser

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tables.txt
.devcontainer/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
colab-notebook/: format_questions.py  formatted questions.json  formatted_questions.json  question_title_gen.ipynb  question_title_gen.py  question_titles.json
experiments/: function_claling.ipynb  instructor_classification.ipynb  instructor_exp.ipynb  instructor_extraction.ipynb  instructor_question_naming.ipynb  langchain_exp.ipynb  ollama.ipynb  pre_processor.ipynb
parser/: model.py  page_processing.py  parse.py  question_extraction.py  scrape.py  scraper.py  section_processing.py  vector_processing.py
parser/dataset/: dataloader.py  exam.py
parser/featurization/: input_type_extraction.py
scripts/: install_hermes.sh  setup.sh
src/: main.rs
vector-graphics/: table_dimensions.txt
