[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
datasize = "0.2.15"
image = "0.25.2"
lopdf = { version = "0.34.0", features = ["async", "image", "serde", "tokio"] }
rayon = "1.10.0"
serde = "1.0.210"
serde_json = "1.0.128"
shellexpand = "3.1.0"
tokio = { version = "1.40.0", features = ["full"] }
