[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Warren Snipes <contact@warrensnipes.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "5.0.0"
pillow = "10.4.0"
pydantic = "^2.9.2"
pymupdf = "^1.24.10"
instructor = "^1.5.1"
llama-cpp-python = { version = "^0.2.0", optional = true}

[tool.poetry.extras]
experiment = ["instructor", "llama-cpp-python"]
cuda = ["llama-cpp-python"]
   
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.group.experiments.dependencies]
instructor = "^1.5.1"

[[tool.poetry.source]]
name = "llama-cpp-python"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu122"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


