[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Warren Snipes <contact@warrensnipes.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "5.0.0"
pillow = "10.4.0"
pydantic = "^2.9.2"
pymupdf = "^1.24.10"
instructor = { version = "^1.5.1", optional = true }
llama-cpp-python = { version = "^0.2.0", optional = true }
nltk = { version = "^3.9.1", optional = true }

[tool.poetry.extras]
experiment = ["instructor", "nltk"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.group.llm-cuda.dependencies]
llama-cpp-python = { version = "^0.2.0", optional = true, source = "llama-cpp-python" }

[tool.poetry.group.llm.dependencies]
llama-cpp-python = { version = "^0.2.0", optional = true, source = "llama-cpp-python" }


[[tool.poetry.source]]
name = "llama-cpp-python"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu122"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "nltk.*",
]
ignore_missing_imports = true